# volstreet

./: BANKNIFTY_IV_DATA.csv  README.md  SmartWebSocketV2.py  archive.txt  autotradingfunctions.py  autotradingfunctions_backup.py  daily_butterfly.txt  datacrunch.ipynb  index_straddles_example.py  intraday_straddles.py  overnight_positions.py  requirements.txt  setup.cfg  setup.py
autotrader/: SmartWebSocketV2.py  __init__.py  autotradingfunctions.py  blackscholes.py  datamodule.py  discord_bot.py  exceptions.py  nsefunctions.py  qtyfreeze.csv  strategies.py
autotrader/info/: BANKNIFTY_constituents.csv  NIFTY_constituents.csv
data/: vol_surface.csv
examples/: data_example.py  index_straddles_example.py  synthetic_strategy_example.py
iv_models/: random_forest_model_(0.0008, 0.0027).joblib  random_forest_model_(0.0082, 0.0274).joblib  random_forest_model_(0.0274, 10.0).joblib
volstreet/: __init__.py  blackscholes.py  constants.py  datamodule.py  dealingroom.py  exceptions.py  nsefunctions.py  strategies.py
volstreet/info/: FINNIFTY_constituents.csv
volstreet/iv_models/: random_forest_model_(0, 0.0003).joblib  random_forest_model_(0.0003, 0.0008).joblib  random_forest_model_(0.0027, 0.0082).joblib
